--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <nav class="nav">
-        <div class="logo">Citrine</div>
+        <div class="logo">
+          <img src="assets/citrine-logo1.png" alt="Citrine Logo">
+        </div>
         <ul class="nav-links">
             <li><a href="#menu">Menu</a></li>
             <li><a href="#about">About</a></li>
